<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white_color">

    <RelativeLayout
        android:id="@+id/unrefund_rel_area_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/image_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginTop="@dimen/margin_10dp"
            android:src="@drawable/refund_close" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/update_rate_tittle"
            android:textColor="@color/black_color"
            android:textSize="@dimen/text_size_20sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_1"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/unrefund_rel_area_1"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:background="@color/divide_gray_color" />


    <RelativeLayout
        android:id="@+id/unrefund_rel_area_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/view_1"
        android:layout_marginTop="@dimen/margin_5dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_10dp"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:text="@string/update_rate_rate"
            android:textSize="@dimen/text_size_16sp" />

        <EditText
            android:id="@+id/edit_unrefund_controller_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="@dimen/margin_10dp"
            android:layout_marginRight="@dimen/margin_10dp"
            android:layout_toEndOf="@+id/textView3"
            android:background="@null"
            android:cursorVisible="true"
            android:gravity="right"
            android:hint="@string/update_rate_hint"
            android:inputType="numberDecimal"
            android:textCursorDrawable="@drawable/color_cursor"
            android:textSize="@dimen/text_size_16sp" />
    </RelativeLayout>

    <View
        android:id="@+id/view_4"
        android:layout_width="match_parent"
        android:layout_height="0.2dp"
        android:layout_alignParentStart="true"
        android:layout_below="@id/unrefund_rel_area_4"
        android:layout_marginBottom="@dimen/margin_5dp"
        android:layout_marginTop="@dimen/margin_5dp"
        android:background="@color/divide_gray_color" />

    <Button
        android:id="@+id/btn_refund"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_4"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/margin_20dp"
        android:layout_marginLeft="@dimen/margin_10dp"
        android:layout_marginRight="@dimen/margin_10dp"
        android:layout_marginTop="@dimen/margin_20dp"
        android:background="@drawable/material_button"
        android:text="@string/update_rate_comfirm"
        android:textColor="@color/white_color"
        android:textSize="@dimen/text_size_20sp" />

</RelativeLayout>