<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/margin_10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rel_staff_search_area_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/white_color">

                <RelativeLayout
                    android:id="@+id/rel_staff_search_item_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rel_height"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:text="@string/staff_search_customer"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/text_size_16sp" />

                    <com.yang.yunwang.base.ui.ClearEditText
                        android:id="@+id/edit_staff_search_customer"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:layout_alignParentEnd="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:layout_marginRight="@dimen/margin_10dp"
                        android:layout_toEndOf="@+id/textView2"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="right|center_vertical"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/text_size_16sp" />
                </RelativeLayout>

                <View
                    android:id="@+id/view_1"
                    android:layout_width="match_parent"
                    android:layout_height="0.2dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@id/rel_staff_search_item_1"
                    android:background="@color/divide_gray_color" />

                <RelativeLayout
                    android:id="@+id/rel_staff_search_item_4"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/rel_height"
                    android:layout_below="@id/view_1"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:text="@string/staff_search_tel"
                        android:textColor="@color/label_color"
                        android:textSize="@dimen/text_size_16sp" />

                    <com.yang.yunwang.base.ui.ClearEditText
                        android:id="@+id/edit_staff_search_tel"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/edit_height"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="@dimen/margin_10dp"
                        android:layout_marginRight="@dimen/margin_10dp"
                        android:layout_toEndOf="@+id/textView3"
                        android:background="@null"
                        android:cursorVisible="true"
                        android:gravity="right|center_vertical"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textCursorDrawable="@drawable/color_cursor"
                        android:textSize="@dimen/text_size_16sp" />
                </RelativeLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/btn_staff_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/rel_staff_search_area_1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="@dimen/margin_10dp"
                android:layout_marginRight="@dimen/margin_10dp"
                android:layout_marginTop="@dimen/margin_10dp"
                android:background="@drawable/material_button"
                android:text="@string/staff_search_btn_search"
                android:textColor="@color/white_color"
                android:textSize="@dimen/text_size_20sp" />
        </RelativeLayout>
    </ScrollView>

    <include
        layout="@layout/layout_home_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/home_bar_height"
        android:layout_alignParentBottom="true" />

</RelativeLayout>